This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

29-Nov-2001 (Lars Duening)  (3.3.134)
    - (prolang, lex.c) Storing the line number info for the end of an
        include file used the wrong line for rollbacks (reported by
        Guandalug).

28-Nov-2001 (Lars Duening)  (3.3.133)
    - (prolang.y) Another correction to the bugfix of Gimli's problem
        (reported by Freaky).

27-Nov-2001 (Lars Duening)  (3.3.132)
    - (prolang.y) The bugfix to Gimlis problem unfortunately broke a couple
        of muds. This version works better (reported by many people).
    - (object.c) Removed memory leaks in the error handling of include_list()
        and inherit_list().

25-Nov-2001 (Lars Duening)  (3.3.131)
    - (mudlib/sys/functionlist.h) Changed the <> include of lpctypes.h
        into a "" include (suggested by Heiko).
    - (prolang.y) Inheriting two private functions of the same caused the
        compiler to crossdefine the second one to the first. Not directly
        visible to the user, this messed up any use of these functions
        by INITIALIZATION_BY___INIT (reported by Gimli).
    - (object.c) Efun replace_program() can omit the argument if the
        object has only one inherit (suggested by Pulami).

24-Nov-2001 (Lars Duening)  (3.3.130)
    - (lex.c) The auto-include strings needed to be prefixed with a newline
         internally - yet, the newline was added after the string (reported
         by Heiko).

23-Nov-2001 (Lars Duening)
    - (object.c) Efun say() could leak object references (reported by Tomba).
    - (mudlib/sys/functionlist.h) Changed the absolute include of lpctypes.h
        into a <> include (suggested by Heiko).

21-Nov-2001 (Lars Duening)
    - (pkg-mysql.c) Using the mysql->thread_id as handle proved to be
        unreliable as the thread_id may change. Instead an explicit
        handle is now used (thanks, Fuchur!).