@@ -210,8 +210,7 @@ Lars Duening thanks:
      Reimer Behrends (Macbeth@Tubmud)
      Reinhard Pfau (reinhard@netlab1.hrz.uni-siegen.de, mubo@SiliconDream),
      Robb Townsend (meecham@infonline.net)
-     Robert (mud@pc181.iaee.tuwien.ac.at, Nathan@Unholy Lands)
-     Robert Reither (e8925573@student.tuwien.ac.at, Nathan@Unholy.Lands)
+     Robert Reither (mud@klein.htu.tuwien.ac.at, Nathan@Unholy.Lands)
      Rodney Quaye (sark@oberon.krans.com)
      Ron Dawson (rondawson@syd.eastlink.ca, rdawson@cgc.ns.ca, Caper@PixieMud)
      Sebastian Huss (huss@informatik.hu-berlin.de, baba@avalon)
