@@ -20,12 +20,13 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 134)
-(Parent-Version lpmud 3-3 133)
-(Version-Log "Corrected the linenumber information storage on includes.")
+(Project-Version lpmud 3-3 135)
+(Parent-Version lpmud 3-3 134)
+(Version-Log "Corrected an incorrect inter_sp in call_other()s on arrays.
+Some internal debugging tweaks.")
 (New-Version-Log
 "")
-(Checkin-Time "Thu, 29 Nov 2001 20:42:54 -0700")
+(Checkin-Time "Tue, 04 Dec 2001 18:53:54 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -57,8 +58,8 @@
   ;; Information about the driver and the distribution in general
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.4 644))
-  (CREDITS (lpmud/d/22_CREDITS 1.70.1.32 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.197 644))
+  (CREDITS (lpmud/d/22_CREDITS 1.70.1.33 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.198 644))
   (HISTORY (lpmud/f/49_HISTORY 1.224 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.13 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -111,8 +112,8 @@
   (src/actions.c (lpmud/D/12_actions.c 1.15.1.27 644))
   (src/array.h (lpmud/f/47_array.h 1.18.1.15 644))
   (src/array.c (lpmud/d/12_array.c 1.46.1.32 644))
-  (src/backend.h (lpmud/f/46_backend.h 1.20.1.3 644))
-  (src/backend.c (lpmud/d/6_backend.c 1.68.1.33 644))
+  (src/backend.h (lpmud/f/46_backend.h 1.20.1.4 644))
+  (src/backend.c (lpmud/d/6_backend.c 1.68.1.34 644))
   (src/bitstrings.h (lpmud/I/47_bitstrings 1.1 644))
   (src/bitstrings.c (lpmud/I/48_bitstrings 1.4 644))
   (src/call_out.h (lpmud/f/45_call_out.h 1.7.1.4 644))
@@ -139,11 +140,11 @@
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.4 644))
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.6 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.22 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.97 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.98 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.9 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.70 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.7 644))
-  (src/main.c (lpmud/b/8_main.c 1.60.1.41 644))
+  (src/main.c (lpmud/b/8_main.c 1.60.1.42 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.9 644))
   (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.31 644))
   (src/md5.h (lpmud/L/18_md5.h 1.2 644))
@@ -170,7 +171,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.9 644))
   (src/port.c (lpmud/39_port.c 1.17.1.6 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.14 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.83 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
@@ -185,7 +186,7 @@
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.19 644))
   (src/simulate.c (lpmud/31_simulate.c 1.88.1.51 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.7 644))
-  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.37 644))
+  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.38 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.2 644))
   (src/sprintf.c (lpmud/28_sprintf.c 1.31.1.31 644))
   (src/strfuns.h (lpmud/B/51_strfuns.h 1.11.1.4 644))
@@ -352,7 +353,7 @@
 
   ;; Various example and support files
   (mudlib/README (lpmud/D/51_README 1.1.1.3 644))
-  (mudlib/dhrystone.c (lpmud/E/34_dhrystone. 1.1.1.1 644))
+  (mudlib/dhrystone.c (lpmud/E/34_dhrystone. 1.1.1.2 644))
   (mudlib/erq-tool.c (lpmud/d/31_erq.c 1.1 644))
   (mudlib/simul_efun-dr.c (lpmud/51_simul_efun 1.3 644))
   (mudlib/master_skeleton.c (lpmud/b/2_master_ske 1.20 644))
